// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebResultIcon > renders FileIcon for invalid URL 1`] = `
<svg
  className="icon"
  dangerouslySetInnerHTML={
    {
      "__html": "<path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/>",
    }
  }
  fill="none"
  height={16}
  stroke="currentColor"
  strokeLinecap="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={16}
  xmlns="http://www.w3.org/2000/svg"
/>
`;

exports[`WebResultIcon > renders favicon for valid URL 1`] = `
<img
  alt="favicon"
  height={16}
  onError={[Function]}
  src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://example.com&size=128"
  style={
    {
      "height": "16px",
      "objectFit": "contain",
      "width": "16px",
    }
  }
  width={16}
/>
`;

exports[`WebResultIcon > renders with default size 1`] = `
<img
  alt="favicon"
  height={10}
  onError={[Function]}
  src="https://t3.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://example.com&size=128"
  style={
    {
      "height": "10px",
      "objectFit": "contain",
      "width": "10px",
    }
  }
  width={10}
/>
`;
